feature: se agrego la funcionalidad extraer texto

--- a/BucketImg/src/app/extraer/extraer.page.html
+++ b/BucketImg/src/app/extraer/extraer.page.html
@@ -16,7 +16,7 @@
       <div class="divDoble">
         <div class="divI">
           <div class="divImg">
-            <ion-img class="imgPerfil" [src]="picImage"></ion-img>
+            <ion-img class="imgNormalPopup" [src]="picImage"></ion-img>
           </div>
           <ion-input type="file"  accept=".csv, text/plain" (change)="chooseFile($event)"></ion-input>
         </div>
